# sdlpal-rix-player

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh-TW.md  RELEASING.md  THIRD_PARTY_NOTICES.md  build-msys2.sh  build-unix.sh  package-source-bundle.sh  pal_config.h  rix_player.cpp  sdlpal.cfg.example  track_metadata.h
cmake/: FusionPixelDownload.cmake  GeneratePlayerSource.cmake  fusion_pixel_download.cmake  fusion_pixel_font.rc.in
docs/: zh-tw-ui.md
licenses/: FusionPixel-OFL-1.1.txt
src/: legacy_player.inc
